Avoid clobbering the app list pinned taskbar shortcut on startup (for now).

This is a partial revert of r393415 which removed checking for
--show-app-list from shell_integration_win.cc's GetExpectedAppId(). This
meant that the expected app_id for app launcher shortcuts would now be
the same as regular Chrome.

MigrateTaskbarPinsCallback() then successfully updates the app_id for
the existing App Launcher shortcut, but Windows immediately sees 2
pinned apps for the same app_id and clobbers one of them.

To fix, we need to keep the old app_id around for a bit longer. The
shortcuts will be removed properly in a later milestone (from the
taskbar as well as other places which are not currently clobbered by
coincidence).

BUG=613789

Review-Url: https://codereview.chromium.org/2005163002
Cr-Commit-Position: refs/heads/master@{#395785}

Former-commit-id: c2c690ab31976ed7bd715709606f736085d6b43e