chrome/browser/shell_integration_win.cc
@@ -95,6 +95,14 @@ base::string16 GetProfileIdFromPath(const base::FilePath& profile_path) {
   return profile_id;
 }
 
+base::string16 GetAppListAppName() {
+  static const base::char16 kAppListAppNameSuffix[] = L"AppList";
+  BrowserDistribution* dist = BrowserDistribution::GetDistribution();
+  base::string16 app_name(dist->GetBaseAppId());
+  app_name.append(kAppListAppNameSuffix);
+  return app_name;
+}
+
 // Gets expected app id for given Chrome (based on |command_line| and
 // |is_per_user_install|).
 base::string16 GetExpectedAppId(const base::CommandLine& command_line,
@@ -127,6 +135,8 @@ base::string16 GetExpectedAppId(const base::CommandLine& command_line,
     app_name = base::UTF8ToUTF16(
         web_app::GenerateApplicationNameFromExtensionId(
             command_line.GetSwitchValueASCII(switches::kAppId)));
+  } else if (command_line.HasSwitch(switches::kShowAppList)) {
+    app_name = GetAppListAppName();
   } else {
     BrowserDistribution* dist = BrowserDistribution::GetDistribution();
     app_name = ShellUtil::GetBrowserModelId(dist, is_per_user_install);
